# adventofcode

./: .gitignore  README.md  cleanup.py  initialize_solution.py  pyproject.toml  secrets.json  solution01.py  solution02.py  solution04.py  solution05.py  solution07.py  solution09.py  solution1.py  solution10.py  solution11.py  solution15.py  solution16.py  solution17.py  solution18.py  solution19.py  solution2.py  solution22.py  solution3.py  solution4.py  solution5.py  solution6.py  solution7.py  solution8.py  solution9.py  solution_template.py  utils.py
2015/: requirements.txt  solution01.py  solution02.py  solution03.py  solution04.py  solution05.py  solution07.py  solution09.py  solution10.py  solution11.py  solution12.py  solution13.py  solution16.py  solution17.py  solution18.py  solution19.py  solution20.py  solution22.py  solution23.py  solution24.py  solution25.py
2016/: requirements.txt  solution01.py  solution02.py  solution04.py  solution07.py  solution08.py  solution09.py  solution10.py  solution12.py  solution13.py  solution14.py  solution15.py  solution16.py  solution17.py  solution20.py  solution22.py  solution23.py  solution25.py
2019/: solution01.py
2020/: solition21.py  solution03.py  solution06.py  solution08.py  solution12.py  solution13.py  solution19.py  solution20.py  solution25.py
2021/: solution01.py  solution02.py  solution03.py  solution04.py  solution05.py  solution08.py  solution10.py  solution11.py  solution12.py  solution14.py  solution15.py  solution16.py  solution17.py  solution18.py  solution19.py  solution21.py  solution22.py  solution23.py  solution24.py
2022/: requirements.txt  solution03.py  solution04.py  solution06.py  solution07.py  solution10.py  solution11.py  solution14.py  solution15.py  solution18.py  solution20.py  solution21.py  solution22.py  solution23.py  solution24.py  solution25.py
2023/: requirements.txt  solution03.py  solution04.py  solution06.py  solution07.py  solution10.py  solution11.py  solution12_old.py  solution13.py  solution14.py  solution17.py  solution18.py  solution20.py  solution21.py  solution22.py  solution23.py  solution24.py  solution25.py
aoc/: __init__.py  check.py  entry.py
aoc/2015/: solution05.py  solution06.py  solution08.py  solution22.py
aoc/2016/: solution02.py  solution05.py  solution09.py  solution21.py
aoc/2017/: solution01.py
(+336 files in other folders)
