[tool.poetry]
name = "aoc"
version = "1.0.0"
description = ""
authors = ["Bjarke Moensted <nope@nope.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.0"
networkx = "^3.3"
sympy = "^1.13.0"
advent-of-code-data = "^2.0.1"
browser-cookie3 = "^0.19.1"
pynacl = "^1.5.0"

jinja2 = "^3.1.4"
termcolor = "^2.4.0"
line-profiler = "^4.1.3"
numba = "^0.60.0"
scipy = "^1.14.0"
[tool.poetry.group.dev.dependencies]
advent-of-code-data = "^2.0.1"
browser-cookie3 = "^0.19.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aoc-init = "aoc.utils.cli:initialize"
aoc-check = "aoc.utils.check_solutions:main"
aoc-fix = "aoc.utils.cli:fix_tokens"

[tool.poetry.plugins."adventofcode.user"]
omd = "aoc:plugin"
