[project]
name = "aoc"
version = "1.0.0"
description = ""
authors = [{ name = "Bjarke Moensted", email = "nope@nope.com" }]
requires-python = ">=3.12, <4.0, !=3.11.0"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "numpy>=2.0.0,<3",
    "networkx>=3.3,<4",
    "sympy>=1.13.0,<2",
    "advent-of-code-data>=2.0.1,<3",
    "browser-cookie3>=0.19.1,<0.20",
    "jinja2>=3.1.4,<4",
    "termcolor>=2.4.03",
    "numba>=0.60.0",
    "scipy>=1.14.0,<2",
    "aococr>=0.2.0",
    "scalene>=1.5.45",
    "line-profiler>=4.2.0",
    "ruff>=0.14.3",
]

[project.scripts]
aoc-init = "aoc.utils.cli:initialize"
aoc-check = "aoc.utils.check_solutions:main"
aoc-fix = "aoc.utils.cli:fix_tokens"

[project.entry-points."adventofcode.user"]
omd = "aoc:plugin"

[dependency-groups]
dev = [
    "advent-of-code-data>=2.0.1,<3",
    "browser-cookie3>=0.19.1,<0.20",
    "mypy>=1.16.0,<2",
]

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
lint.select = [
  "E",  # pycodestyle (PEP 8)
  "F",  # pyflakes (unused imports, variables, etc.)
  "I",  # isort (import sorting)
]
lint.ignore = []
